--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@ body {
     position: relative;
 }
 
-header, footer {
+header{
     background-color: #333;
     color: #fff;
     text-align: center;
@@ -57,7 +57,10 @@ nav ul li a:hover {
 }
 
 footer {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
+    background-color: #333;
+    color: #fff;
+    padding: 10px 20px;
 }
